FEATURE 通过启动 npm run docker-watch-toolbox ，已经可以成功在虚拟机（toolbox）上的 docker 容器中进行调试

--- a/routes.yaml
+++ b/routes.yaml
@@ -11,6 +11,12 @@ routes:
   /account/:
     template: members/account
     data: page.account
+  /authors/:
+    template: page-authors
+  /tags/:
+    template: page-tags
+  /newsletter/:
+    template: page-newsletter
 
 collections:
   /:
