--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: ghost:3.7.0
     container_name: ghost
     volumes:
-      - ./..:/var/lib/ghost/content/themes/liebling:Z
-      - ./ghost.db:/var/lib/ghost/content/data/ghost.db:Z
+      - /data/liebling:/var/lib/ghost/content/themes/liebling:Z
+      - /data/liebling/src/ghost.db:/var/lib/ghost/content/data/ghost.db:Z
     environment:
       - NODE_ENV=development
     ports:
