FEATURE git 增加了参数 depth = 1，仅仅 clone 每个文件最近的提交,解决了 curl 18 transfer closed 问题；grunt prod 改为 grunt build ，暂时规避了 javascript heap out of memory 问题； 制作镜像成功； 但是该镜像来自 12-alpine, 找不到 /bin/bash 等文件

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -14,13 +14,13 @@ RUN apk update && apk add git && \
     yarn global add knex-migrator grunt-cli ember-cli bower
 
 RUN git config --global http.postBuffer 524288000 && \
-    git clone --recurse-submodules https://github.com/7convert/Ghost.git  /var/lib/ghost && \
+    git clone --depth 1 --recurse-submodules https://github.com/7convert/Ghost.git  /var/lib/ghost && \
     cd /var/lib/ghost && \
     yarn setup
 
 WORKDIR /var/lib/ghost
 
-RUN grunt prod
+RUN grunt build
 
 EXPOSE 2368
 
